Wed Oct 29 20:36:08 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/FtRtEvent/ClientORB/FTRT_ClientORB_Initializer.h:
	* orbsvcs/orbsvcs/FtRtEvent/ClientORB/FTRT_ClientORB_Interceptor.cpp:
	* orbsvcs/orbsvcs/FtRtEvent/ClientORB/FTRT_ClientORB_Interceptor.h:
	* orbsvcs/orbsvcs/FtRtEvent/ClientORB/FTRT_ClientORB_Loader.cpp:

	  Remved #include of corbafwd.h and added other includes necessray
	  to get them compiling on builds with MPC.

Wed Oct 29 19:41:14 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/ESF/ESF_Worker.h:
	* orbsvcs/orbsvcs/Event/ECG_ConsumerEC_Control.h:
	* orbsvcs/orbsvcs/Event/EC_ConsumerControl.h:
	* orbsvcs/orbsvcs/Event/EC_SupplierControl.h:
	* orbsvcs/orbsvcs/Notify/Factory.h:

	  Forward declared CORBA::Environment in all these header files. 
	
	* orbsvcs/orbsvcs/FaultTolerance/FT_Endpoint_Selector_Factory.cpp:
	* orbsvcs/orbsvcs/FaultTolerance/FT_Invocation_Endpoint_Selectors.cpp:
         
	  #included Environment.h. 

	  The above fixes should take care of the build problems with
	  SuSE static builds.

Wed Oct 29 17:31:16 2003  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * orbsvcs/examples/LoadBalancing/Makefile:
        * orbsvcs/examples/LoadBalancing/ORBInitializer.cpp:
        * orbsvcs/examples/LoadBalancing/ORBInitializer.h:
        * orbsvcs/examples/LoadBalancing/RPS_Monitor.cpp:
        * orbsvcs/examples/LoadBalancing/RPS_Monitor.h:
        * orbsvcs/examples/LoadBalancing/server.cpp:
        * orbsvcs/examples/LoadBalancing/client.cpp:
        * orbsvcs/examples/LoadBalancing/ServerRequestInterceptor.h:
        * orbsvcs/examples/LoadBalancing/ServerRequestInterceptor.cpp:
        * orbsvcs/examples/LoadBalancing/Stock.cpp:
        * orbsvcs/examples/LoadBalancing/Stock.h:
        * orbsvcs/examples/LoadBalancing/StockFactory.h:
        * orbsvcs/examples/LoadBalancing/StockFactory.cpp:
        * orbsvcs/examples/LoadBalancing/Test.idl: