@@ -1,6 +1,6 @@
 //=============================================================================
 /**
-*  @file   be_visitor_tmplinst_cs.cpp
+*  @file   tmplinst_cs.cpp
 *
 *  $Id$
 *
