@@ -1,6 +1,6 @@
 //=============================================================================
 /**
-*  @file   be_visitor_tmplinst_cs.h
+*  @file   tmplinst_cs.h
 *
 *  $Id$
 *
